Changes to squid-1.1.alpha2:

	- Added Support for RFC931/ident

Changes to squid-1.0.1 (July 8, 1996):

	- Fixed ftpget server looping on socket EOF condition.
	- Fixed SA_RESETHAND undefined bug.
	- Fixed half-hour timezone offset bug.
	- Fixed parse_rfc850() to return -1 instead of 0 upon error.
	- Added patch for Motorola systems from Tony Lorimer.
	- Added support for HTTP PUT method.
	- Added check for <netinet/tcp.h> for HP-UX.
	- Added GNU General Public License.
	- Changed ttlSet() to use Date field if Last-Modified is absent.
	- Changed http.c to not save objects from neighbors which do
	  not have Date, Last-Modified, or Expires values.
	- Changed some large local character arrays to static.

Changes to squid-1.0.0 (July 1, 1996):

	- Fixed beta17 "fd_lifetime" typo bug
	- Added 'firewall_ip_list' to configuration options
	- Set resolver options to disable searching default domains
	  and parent domains.
	- Added blocking-rebuild -F option.
	- Fixed storeMaintainSwapSpace to be called every 10 seconds.
	- Fixed ICP_HIT_OBJ bug causing objects to get stuck in VM.
	- Fixed matching the ends of domain names (e.g. bar.com no 
	  longer matches foobar.com).
	- Fixed checking return code from fprintf() while writing the
	  clean swap log.
	- Fixed fatal_dump from storeSwapoutHandle running out of disk
	  space.
	- Added disabling of a neighbor cache if 95% of replies are
	  UDP_DENIED.
	- Added accounting for misc memory/data structures
	- Added 'no-query' option for 'cache_host' config line
	- Added error reporting to SSL requests.
	- Fixed SSL bug, client abort was not closing the server
	  side connection.
	- Fixed checking hierarchy_stoplist bug.
	- Fixed ipcache error messages by giving each entry its
	  own string.
	- Use sigaction() instead of signal() if available.
	- Fixed ipcache bug causing some lookups to get stuck in
	  PENDING state if all dnsservers are busy.
	- Fixed domain name matching bug when using '.com' instead of
	  'com'.