@@ -3,13 +3,13 @@ dnl  Configuration input file for Squid
 dnl
 dnl  Duane Wessels, wessels@nlanr.net, February 1996 (autoconf v2.9)
 dnl
-dnl  $Id: configure.in,v 1.21 1996/07/09 03:41:04 wessels Exp $
+dnl  $Id: configure.in,v 1.22 1996/07/09 04:46:47 wessels Exp $
 dnl
 dnl
 dnl
 AC_INIT(src/main.c)
 AC_CONFIG_HEADER(include/autoconf.h)
-AC_REVISION($Revision: 1.21 $)dnl
+AC_REVISION($Revision: 1.22 $)dnl
 AC_PREFIX_DEFAULT(/usr/local/squid)
 AC_CONFIG_AUX_DIR(aux)
 
@@ -127,6 +127,7 @@ AC_HEADER_STDC
 
 AC_CHECK_HEADERS( \
 	alloca.h \
+	aio.h \
 	arpa/inet.h \
 	arpa/nameser.h \
 	bstring.h \
