@@ -1,5 +1,5 @@
 /*
- * $Id: disk.h,v 1.6 1996/07/08 22:42:46 wessels Exp $
+ * $Id: disk.h,v 1.7 1996/07/09 04:46:51 wessels Exp $
  *
  * AUTHOR: Harvest Derived
  *
@@ -113,6 +113,8 @@
 #define DISK_FILE_NOT_FOUND      (-5)
 #define DISK_NO_SPACE_LEFT       (-6)
 
+#define MAX_FILE_NAME_LEN 256
+
 typedef int (*FILE_READ_HD) _PARAMS((int fd, char *buf, int size, int errflag,
 	void *data, int offset));
 
@@ -141,4 +143,57 @@ extern int file_update_open _PARAMS((int fd, char *path));
 extern int file_write_lock _PARAMS((int fd));
 extern int disk_init _PARAMS((void));
 
+typedef struct _dwrite_q {
+    char *buf;
+    int len;
+    int cur_offset;
+    struct _dwrite_q *next;
+} dwrite_q;
+
+typedef struct _dread_ctrl {
+    int fd;
+    off_t offset;
+    int req_len;
+    char *buf;
+    int cur_len;
+    int end_of_file;
+    int (*handler) _PARAMS((int fd, char *buf, int size, int errflag, void *data,
+	    int offset));
+    void *client_data;
+} dread_ctrl;
+
+typedef struct _FileEntry {
+    char filename[MAX_FILE_NAME_LEN];
+    enum {
+	NO, YES
+    } at_eof;
+    enum {
+	NOT_OPEN, OPEN
+    } open_stat;
+    enum {
+	NOT_REQUEST, REQUEST
+    } close_request;
+    enum {
+	NOT_PRESENT, PRESENT
+    } write_daemon;
+    enum {
+	UNLOCK, LOCK
+    } write_lock;
+    int access_code;		/* use to verify write lock */
+    enum {
+	NO_WRT_PENDING, WRT_PENDING
+    } write_pending;
+    void (*wrt_handle) ();
+    void *wrt_handle_data;
+    dwrite_q *write_q;
+    dwrite_q *write_q_tail;
+#if USE_ASYNC_IO                       /* Data for asynchronous reads */
+    struct aiocb aio_cb;       /* Control block */
+    int (*aio_handler)(int fd, void *data);
+#endif
+} FileEntry;
+
+extern FileEntry *file_table;
+
 #endif /* DISK_H */
+
